[workspace]
members = [ "dist-structs", "lamellar-disjoint-set","lamellar-rmat","rmat-generator", "serial-disjoint-set"]

[package]
name = "graph-theory"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.2"
async-trait = "0.1.80"
csv = "1.3.0"
dist-structs = { version = "0.1.0", path = "dist-structs" }
lamellar = "0.6.1"
serde = "1.0.204"
