[package]
name = "lamellar-rmat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
dist-structs = { version = "0.1.0", path = "../dist-structs" }
lamellar = "0.6.1"
rand = {version = "0.8.5", features = ["small_rng"]}
rmat-generator = {path = "../rmat-generator"}
serde_json = "1.0.120"
